--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
+    "react-day-and-night-toggle": "^1.0.18",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
@@ -38,6 +40,7 @@
     "@types/node": "^18.16.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react": "^4.0.0",
