--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "codemirror-graphql": "^2.0.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
