--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "cy:e2e": "start-server-and-test dev http-get://localhost:5173 cy:open-e2e"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/base": "^5.0.0-beta.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "codemirror-graphql": "^2.0.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
