--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cy:e2e": "start-server-and-test dev http-get://localhost:5173 cy:open-e2e"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -28,6 +29,7 @@
     "codemirror-graphql": "^2.0.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "firebase": "^9.21.0",
+    "graphql": "^16.6.0",
     "i18next": "^22.4.15",
     "react": "^18.2.0",
     "react-day-and-night-toggle": "^1.0.18",
