--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@apollo/client": "^3.7.14",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
     "@material-ui/core": "^4.12.4",
     "@mui/base": "^5.0.0-beta.0",
     "@mui/icons-material": "^5.11.16",
@@ -40,7 +41,8 @@
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
     "sass": "^1.62.1",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
